--- a/index.html
+++ b/index.html
@@ -6,5 +6,34 @@
     <link rel="stylesheet" href="style.css" />
     <script src="index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div id="calculator">
+      <div id="display-container">
+        <p id="display">10+5=15</p>
+      </div>
+      <div id="buttons">
+        <div id="numbers">
+          <button class="number">1</button>
+          <button class="number">2</button>
+          <button class="number">3</button>
+          <button class="number">4</button>
+          <button class="number">5</button>
+          <button class="number">6</button>
+          <button class="number">7</button>
+          <button class="number">8</button>
+          <button class="number">9</button>
+          <button class="number">10</button>
+        </div>
+        <div id="operators">
+          <button class="operator">A/C</button>
+          <button class="operator">+</button>
+          <button class="operator">-</button>
+          <button class="operator">*</button>
+          <button class="operator">/</button>
+          <button class="operator">=</button>
+          <button class="operator">.</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
