Feat: Finish basic styling for the calculator

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="calculator">
       <div id="display-container">
-        <p id="display">10+5=15</p>
+        <p id="display">15</p>
       </div>
       <div id="buttons">
         <div id="numbers">
