--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
   </head>
   <body>
     <div id="calculator">
       <div id="display-container">
-        <p id="display">15</p>
+        <p id="display">0</p>
       </div>
       <div id="buttons">
         <div id="numbers">
