Feat: Change classes on operators a bit to avoid issues with A/C and .

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
           <button class="number">0</button>
         </div>
         <div id="operators">
-          <button class="operator">A/C</button>
+          <button id="clear">A/C</button>
           <button class="operator">+</button>
           <button class="operator">-</button>
           <button class="operator">*</button>
           <button class="operator">/</button>
           <button class="operator">=</button>
-          <button class="operator">.</button>
+          <button id="decimal">.</button>
         </div>
       </div>
     </div>
