Feat: change class on equals sign to avoid issues with calculations

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <button class="operator">-</button>
           <button class="operator">*</button>
           <button class="operator">/</button>
-          <button class="operator">=</button>
+          <button id="equals">=</button>
           <button id="decimal">.</button>
         </div>
       </div>
