Feat: add a backspace button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <button class="operator">/</button>
           <button id="equals">=</button>
           <button id="decimal">.</button>
+          <button id="delete">del</button>
         </div>
       </div>
     </div>
